--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,6 +45,31 @@ production:
   #ip:       ^127.0.0*
   #redirect: 503.html
 
+
+
+# == CACHE ==
+# To speed up page loads you can enable caching for certain elements within phpwax. All will take white or
+# black lists (inclusions / exclusions) in the form of regular expressions (passed to a preg_match call).
+#
+# I would suggest that anything you turn on here you set to false in development.php with a Config::set() call
+# in order to avoid seeing cached content while working locally!
+#
+# layout_cache:
+#  This will cache the entire page and if used properly can load the entire page request from cache with no
+#  need to load in the framework; just a few dependancies
+#
+# view_cache
+#  While turned on individual views can be cached, so when the template is rendered the view is simply read 
+#  from cache and does not have to parse the view
+#
+# partial_cache
+#  Much like view_cache, only for partial calls
+#
+# image_cache
+#  Currently specific to the show_image function that comes with Wildfire CMS; but using this
+#  will use the cached versions of image files instead of having to render them in the framework
+# ====
+
 #layout_cache:
   #engine: "File"
   #exclude_post: "yes"
@@ -59,9 +84,9 @@ production:
     #contact: "/contact/i"
     #admin: "/admin/i"
    
-# If your using the cms, you might want to turn this on... so show image
-# requests it doesnt have to load the entire framework
-#    
+# If your using wildfire cms, you might want to turn this on... so show image
+# requests it doesnt have to load the entire framework 
 #image_cache:
+  #lifetime: "forever"
   #engine: "Image"
   #exclude_post: "no"    
