added tmp/session generic readme file and amended .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-capfile
 wax
-wax/
 plugins/*
-public/files/
+public/files/*
 .DS_Store
-tmp/
-!tmp/cache
-!tmp/log
-public/javascripts/build*
-public/stylesheets/build*
+tmp/cache/*
+tmp/log/*
+tmp/session/*
+!tmp/cache/README
+!tmp/log/README
+!tmp/session/README
+!public/files/README
+public/javascripts/build
+public/stylesheets/build
