--- a/app/platform/nginx.conf
+++ b/app/platform/nginx.conf
@@ -41,5 +41,5 @@ server {
 server {
   listen 80;
   server_name SERVER_ALIAS1 SERVER_ALIAS2 ETC.;
-  rewrite http://MAIN_SERVER/ permanent;
+  rewrite (.*) http://MAIN_SERVER/ permanent;
 }
