--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wax"]
 	path = wax
 	url = git@github.com:phpwax/phpwax
+[submodule "plugins/cms"]
+	path = plugins/cms
+	url = git@github.com:phpwax/wildfire
